Make it possible to un-accept an accepted offer

--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -47,7 +47,10 @@
                         %i.icon-comment
                         Reply
                       -if offer.accepted?
-                        %span.badge.badge-success Accepted 
+                        %span.badge.badge-success Accepted
+                        =link_to reject_offer_path(offer), :class=>"post-action" do
+                          %i.icon-remove
+                          Un-accept
                       -elsif @need.accepted_offer.nil?
                         =link_to accept_offer_path(offer), :class=>"post-action" do
                           %i.icon-ok
