--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -7,6 +7,7 @@
     .request-body.mb2
       %h1=title @need.title
       =simple_format(@need.description)
+  .span2=link_to "Ask again", new_need_path(:like => @need.id ), :class => "btn"
       
 #request-activity.row
   -if logged_in_as?(@need.user) && @offers.empty?
