Add comments to posts on needs#show

--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -18,7 +18,7 @@
         to see who you could help?               
       =link_to "Find someone who needs your help", needs_path, :class=>"btn call-to-action"
   -else
-    .span6.offset1
+    .span8
       -if @need.user != current_user
         .well
           %b
@@ -29,33 +29,9 @@
             If you think you can help, then click on this button to start a private discussion with
             ="#{@need.user}."
           =link_to "Maybe I can help", "#offer-form", :'data-toggle' => "modal",  :class => "btn btn-primary mb-2"
-      %ul.unstyled
+      %ul.unstyled.need-posts
         -@need.posts.order("created_at DESC").each do |post|
-          %li.post
-            .row
-              .span1
-                .list-image
-                  =link_to post.user do
-                    =image_for(post.user, "60x60#")
-                    %p.small-text
-                      =post.user
-              .span4
-                .post-speech=simple_format(post.text)
-                .post-actions
-                  -if @need.user == current_user
-                    -if offer = @need.offers.where(["offers.user_id = ?", post.user_id]).first
-                      =link_to "#", :class=>"post-action" do
-                        %i.icon-comment
-                        Reply
-                      -if offer.accepted?
-                        %span.badge.badge-success Accepted
-                        =link_to reject_offer_path(offer), :class=>"post-action" do
-                          %i.icon-remove
-                          Un-accept
-                      -elsif @need.accepted_offer.nil?
-                        =link_to accept_offer_path(offer), :class=>"post-action" do
-                          %i.icon-ok
-                          Accept this offer
+          =render("needs/post", :post => post)
     .span4
       -if @offers.present?
         %h3.mb1 People offering help
