Display your community champion and ask to become one on profile page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,6 +12,14 @@
               =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
   .span9
     %h1.mb-1=title(@user)
+    %h3.mb-1
+      -if @user.community_champion
+        ="Your community champion is #{link_to_self(@user.community_champion)}".html_safe
+      -else
+        -if @user.champion_request_at
+          Your request to become a community champion is being considered
+        -else
+          ="There isn't a community champion for your area - #{link_to 'ask to become one', request_to_be_champion_user_path, :method => :put}".html_safe
     -if @user.bio
       =simple_format(@user.bio)
       .action-link
