--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,4 +2,7 @@
   .row
     .span12
       %footer.footer
-        Yoomee
+        %p.copyright
+          &copy; Neighbours Can Help Ltd          
+        =link_to "Nominet trust", "http://www.nominettrust.org.uk/", :Target=>"_blank", :class=>"nominet-logo footer-logo"
+        =link_to "Yoomee", "http://www.yoomee.com/", :Target=>"_blank", :class=>"yoomee-logo footer-logo"
