--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -37,8 +37,8 @@
             %li=link_to "Requests", needs_path, :class=>"nav-link"
           -else
             %li=link_to "Login", sign_in_path, :class=>"nav-link btn"
-          %li=link_to "Blog", "/wireframes/blog", :class=>"nav-link"
-          %li=link_to "About", "/wireframes/about", :class=>"nav-link"
+          %li=link_to_slug :stories, :class=>"nav-link"
+          %li=link_to_slug :about, :class=>"nav-link"
           %li=link_to "Home", "/", :class=>"nav-link"
 -if show_control_panel?
   .container
