Logged in home intro illustration and new navigation

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,12 @@
+#home-intro
+  .home-intro-text
+    %h2.home-welcome.home-intro-text Welcome to Neighbours Can Help
+    %h3.home-where.home-intro-text ...where neighbours help each other
+  %i#circle1.icon-user.intro-circle-icon.fade_in
+  %i#circle2.icon-user.intro-circle-icon.fade_in
+  %i#circle3.icon-user.intro-circle-icon.fade_in
+.what-help
+  %h2.what-help-text What help would you like?
 .row                              
   .span6
     %h2 Site activity
