--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,12 +48,23 @@
 .fade_in.fade_five,  {-webkit-animation-delay: 0, 1.2s;}
 .fade_in.fade_six, {-webkit-animation-delay: 0, 1.5s;}
 
-.main-nav a {
+.main-nav a  {
 	    
      -webkit-transition: .2s ease-in;
      -moz-transition: .2s ease-in;
      transition: .2s ease-in;
+}
+.intro-circle-icon {
+     -webkit-transition: .1s ease-in;
+     -moz-transition: .1s ease-in;
+     transition: .1s ease-in;
   
+}
+
+.what-help {
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+  border-radius:5px;
 }
 
 
@@ -203,11 +214,9 @@ br.clear {
 	color: #b22d35;
 	border-bottom: 1px dotted #b22d35;
 }
-#header {
-  margin-bottom: 20px;  
-}
-#header_row {
-  padding: 20px 0 10px;
+
+#header-row {
+  padding: 15px 0 0px;
 }
 #headline_image {
 	box-shadow:1px 1px 3px #ccc
@@ -228,23 +237,43 @@ br.clear {
 #site_logo a:hover {
   text-decoration: none;
 }
+.main-nav {
+	margin-top: 0px;
+	font-size: 22px;
 
+}
+.nav-strip {
+  float: left;
+  margin: 20px 0 40px;
+  width: 100%;
+  background: #ebe6dc;
+	box-shadow:inset 1px -1px 5px rgba(0,0,0,0.04);
+}
+.nav-strip .nav-tabs {
+  margin-bottom: 0;
+  margin-left: 10px;
+  margin-top: 15px;
+  border: none;
+}
 .main-nav li {
-  float: right;
-  margin: 0px;
+
 }
-.main-nav a {
-  margin: 0px 0 0 10px;
-  padding: 5px 10px;
-  border-radius:15px;
+.main-nav li a {
+  margin: 0px 0 0 0px;
+  padding: 15px 30px 18px;
+  line-height: 100%;
+  color: #333;
+  border: none;
 }
-.main-nav a:hover {
+.main-nav li a:hover {
   text-decoration: none;
-  color: #0088cc;
+
+
   background: #f5f5f5;
 }
-#header_links {
+#header-links {
   float: right;
+  margin-top: 25px;
 }
 .header_link {
   font-size: 14px;
@@ -290,6 +319,10 @@ br.clear {
 }
 .main-nav .active a {
   color: #00558D;
+  margin-right: 10px;
+  border: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+
 }
 
 /*========== Flash ==========*/
@@ -303,6 +336,58 @@ br.clear {
 }
 
 /*========== Homepage ==========*/
+#home-intro {
+	background: url(/assets/home_intro.png) bottom center no-repeat;
+  height: 300px;
+  float: left;
+  width: 100%;
+}
+.home-intro-text {
+	text-align: center;
+	float: left;
+	width: 100%;
+	color: #b08193;
+	font-size: 30px;
+	line-height: 1.2;
+
+}
+.home-welcome {
+  margin: 20px 0 4px;
+  color: #333;
+}
+
+.what-help {
+	background: #b08193;
+	float: left;
+	clear: left;
+	width: 800px;
+	padding: 30px;
+	margin: 0 0 40px 30px; 
+	box-shadow:1px 1px 10px rgba(0,0,0,0.1), 1px 1px 1px rgba(0,0,0,0.3);
+}
+.what-help-text {
+  margin-bottom: 0;
+  color: #fff;
+}
+.intro-circle-icon {
+  display: block;
+  background: #f8c57a;
+  float: left;
+  text-align: center;
+  width: 30px;
+  font-size: 18px;
+  height: 30px;
+  line-height: 30px;
+  color: #fff;
+  border-radius:30px;
+}
+.intro-circle-icon:hover {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius:50px;
+  font-size: 25px;
+}
 
 #home-map {
    background: url(/assets/map.png) top center no-repeat;
