--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -39,11 +39,11 @@
       .span12              
         #nav.main-nav
           %ul.nav.nav-tabs
-            %li.active=link_to "Home", "/", :class=>"nav-link"
-            %li=link_to_slug :about, :class=>"nav-link"
-            %li=link_to_slug :stories, :class=>"nav-link"
+            %li#link-home=link_to "Home", "/", :class=>"nav-link"
+            %li#link-about=link_to_slug :about, :class=>"nav-link"
+            %li#link-stories=link_to_slug :stories, :class=>"nav-link"
             -if current_user
-              %li=link_to "My neighbourhood", needs_path, :class=>"nav-link"
+              %li#link-neighbourhood=link_to "My neighbourhood", needs_path, :class=>"nav-link"
           
 -if show_control_panel?
   .container
