--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -377,7 +377,7 @@ br.clear {
 .home-help-link {
 	float: left;
 	clear: left;
-	margin: 0 0 0 350px;
+	margin: 0 0 40px 350px;
 	color: #999;
 	border-bottom: 1px solid #f5f5f5;
   
