--- a/app/views/home/logged_out_index.html.haml
+++ b/app/views/home/logged_out_index.html.haml
@@ -1,79 +1,22 @@
-.row
-  .span12.fade_in
-    #home-map
-      .you-are-in
-        %p
-          You are in 
-          %select
-            %option Maltby
-            %option Other areas coming soon!
-.row.fade_in         
-  .span6
-    %h2 Looking for help?
-    %ul.help-list.unstyled
-      -@needs.each do |need|
-        %li.list
-          .list-image
-            =link_to "#" do
-              =image_for(need.user, "60x50#")
-              %p.small-text
-                =need.user
-          .list-text
-            %h3
-              =link_to need.title, "#register-popup", :"data-toggle"=>"modal"
-            %p
-              =need.description
-            
-    =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
-                                         
-        
-  .span6
-    %h2 Already helped
-    %ul.help-list.unstyled
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Borrow a ladder", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Tyre pressures", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Visiting my father", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Taking cat to the vet", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.                                       
+#home-intro
+  .home-intro-text
+    %h2.home-welcome.home-intro-text
+      Welcome to Neighbours Can Help       
+    %h3.home-where.home-intro-text ...where neighbours help each other
+  %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
+  %i#circle2.icon-user.intro-circle-icon.circle1.fade_in.fade_two
+  %i#circle3.icon-user.intro-circle-icon.circle2.fade_in.fade_three
+  %i#circle4.icon-user.intro-circle-icon.circle3.fade_in.fade_four  
+  %i#circle5.icon-user.intro-circle-icon.circle4.fade_in.fade_five     
+  %i#circle6.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
+  %i#circle7.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
+.what-help
+  %h2.what-help-text What help would you like?
+  %select#what-help-select
+    %option Finding my dog, baxter
+    %option Assembling a news team
+    %option Trimming my moustache
+    %option Reading the news
+    %option Staying classy
 
-            
-    =link_to "Make an offer to help", "/wireframes/i_can_help", :class=>"btn call-to-action"    
+=link_to ("I'd like to offer some help"), "#", :class=>"home-help-link"
