--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -15,9 +15,7 @@
                 %p.small-text=offer.user
               %h3=offer.need.title
               %p
-                %span.badge 2
-                %span.request-message-text
-                  messages
+                =messages_badge(current_user.new_notification_count("my_offers", offer.need))
 .row
   .span6.offset2                  
     =link_to "Find someone who needs your help", needs_path, :class=>"btn call-to-action"    
