--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,8 @@
+-content_for :head do
+  :javascript
+    $(document).ready(function() {
+      NeedSelect.init();
+    });
 #home-intro
   .home-intro-text
     %h2.home-welcome.home-intro-text
@@ -15,14 +20,9 @@
   %i#circle7.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
 .what-help
   %h2.what-help-text What help would you like?
-  %select#what-help-select
-    %option Finding my dog, baxter
-    %option Assembling a news team
-    %option Trimming my moustache
-    %option Reading the news
-    %option Staying classy
+  =select_tag(:need_category, options_for_select([["Please select...", nil]] + NeedCategory.select_options.map{|nc| [nc.to_s,nc.id]}), :id => "what-help-select")
 
-=link_to ("I'd like to offer some help"), "#", :class=>"home-help-link"
+=link_to ("I'd like to offer some help"), needs_path, :class=>"home-help-link"
     
 -if false  
   .row                              
