--- a/app/views/modals/_community_champion.html.haml
+++ b/app/views/modals/_community_champion.html.haml
@@ -4,6 +4,6 @@
     %h3="Choose a community champion for #{user}"
   .modal-body
     =form.input :validated, :as => :hidden, :input_html => {:value => 1} 
-    =form.input :community_champion_id, :as => :select,  :collection => User.community_champions, :include_blank => false 
+    =form.input :community_champion_id, :as => :select,  :collection => User.community_champions
   .modal-footer
     =form.commit_button "Validate", :button_html => {:class => "btn-primary"}
