Change homepage welcome so there's no space before comma.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,9 +6,7 @@
 #home-intro
   .home-intro-text
     %h2.home-welcome.home-intro-text
-      Hi
-      =current_user
-      , Welcome to Neighbours Can Help 
+      ="Hi #{current_user}, welcome to Neighbours Can Help"
       
     %h3.home-where.home-intro-text ...where neighbours help each other
   %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
