User home/index.html.haml for logged in and out

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,8 +6,10 @@
 #home-intro
   .home-intro-text
     %h2.home-welcome.home-intro-text
-      ="Hi #{current_user}, welcome to Neighbours Can Help"
-      
+      -if current_user
+        ="Hi #{current_user}, welcome to Neighbours Can Help"
+      -else
+        Welcome to Neighbours Can Help
     %h3.home-where.home-intro-text ...where neighbours help each other
   %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
   %i#circle2.icon-user.intro-circle-icon.circle1.fade_in.fade_two
@@ -20,37 +22,7 @@
   %h2.what-help-text What help would you like?
   =select_tag(:need_category, options_for_select([["Please select...", nil]] + NeedCategory.select_options.map{|nc| [nc.to_s,nc.id]}), :id => "what-help-select")
 
-=link_to ("I'd like to offer some help"), needs_path, :class=>"home-help-link"
-    
--if false  
-  .row                              
-    .span6
-      %h2 Site activity
-      %ul.help-list.unstyled
-        -@needs.each do |need|
-          %li.list
-            .list-image
-              =link_to "#" do
-                =image_for(need.user, "60x50#")
-                %p.small-text
-                  =need.user
-            .list-text
-              %h3
-                =link_to_self need
-              %p
-                =need.description
-      =#link_to "Make an offer to help", "/wireframes/i_can_help", :class=>"btn call-to-action"
-    .span6
-      #home-map
-        -if false
-          .you-are-in
-            %p
-              You are in 
-              %select
-                %option Maltby
-                %option Other areas coming soon!    
-  .row
-    .span6
-      =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
-    .span6
-      =link_to "Make an offer to help", needs_path, :class=>"btn call-to-action"    
+-if current_user
+  =link_to "I'd like to offer some help", needs_path, :class=>"home-help-link"
+-else
+  =link_to "I'd like to offer some help", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'
