--- a/app/views/modals/_register_popup.html.haml
+++ b/app/views/modals/_register_popup.html.haml
@@ -2,10 +2,17 @@
   .modal-header
     %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
       ×
-    %h3 Great! We've got your request
+    %h3
+      -if action_name.new? && controller_name.needs?
+        Great! We've got your request
+      -else
+        Before you go any further...  
   .modal-body  
     %p
-      But to keep your neighbourhood secure we need to know who you are before we can share your request with the community. Registration is just three easy steps.
+      -if action_name.new? && controller_name.needs?
+        But to keep your neighbourhood secure we need to know who you are before we can share your request with the community. Registration is just three easy steps.
+      -else
+        You need to register before you can do this.
     %br
       Already registered? 
       =link_to "Log in here.", "/login", :id => "register-modal-login-link"
