--- a/app/views/modals/_register_popup.html.haml
+++ b/app/views/modals/_register_popup.html.haml
@@ -17,5 +17,5 @@
       Already registered? 
       =link_to "Log in here.", "/login", :id => "register-modal-login-link"
   .modal-footer
-    =link_to "Continue with easy registration", new_registration_path, :class=>"btn btn-primary", :data_dismiss=>"modal", :id => "register-modal-register-link"
+    =link_to "Continue with easy registration", (current_page?(root_path) ? new_registration_path(:redirect_to_needs => 1) : new_registration_path), :class=>"btn btn-primary", :data_dismiss=>"modal", :id => "register-modal-register-link"
     =#link_to "Login", "/wireframes/register_help_1", :class=>"btn btn-success", :data_dismiss=>"modal"
